--- a/appointa/index.html
+++ b/appointa/index.html
@@ -437,19 +437,20 @@
     <nav class="section-nav APPOINTA">
       <ol>
         <li><a href="#discover">Discover</a>
-          <ul>
-            <li class=""><a href="#research">Research goals </a></li>
-            <li class=""><a href="#insights">Interview insights </a></li>
-            <li class=""><a href="#empathyMap">Empathy map </a></li>
-            <li class=""><a href="#personas">Personas </a></li>
-            <li class=""><a href="#customerJoutney">Customer journey map </a></li>
-          </ul>
+            <ul>
+              <li class="rightPanel"><a href="#research">Research goals </a></li>
+              <li class="rightPanel"><a href="#insights">Interview insights </a></li>
+              <li class="rightPanel"><a href="#empathyMap">Empathy map </a></li>
+              <li class="rightPanel"><a href="#personas">Personas </a></li>
+              <li class="rightPanel"><a href="#customerJoutney">Customer journey map </a></li>
+            </ul>
+
         </li>
         <li><a href="#define">Define</a>
           <ul>
-            <li class=""><a href="#keyPainPoints">Key pain points </a></li>
-            <li class=""><a href="#affinityMap"> Affinity diagram</a></li>
-            <li class=""><a href="#earlyConcepts">Early concepts </a></li>
+            <li class="rightPanel"><a href="#keyPainPoints">Key pain points </a></li>
+            <li class="rightPanel"><a href="#affinityMap"> Affinity diagram</a></li>
+            <li class="rightPanel"><a href="#earlyConcepts">Early concepts </a></li>
 
 
           </ul>
@@ -458,26 +459,22 @@
 
         <li><a href="#ideation">Develop</a>
           <ul>
-            <li class=""><a href="#opportunities"> Insights to opportunities</a></li>
-            <li class=""><a href="#priorityMatrix"> Priority matrix</a></li>
-
-            <li class=""><a href="#useTypes">3 Persona Types</a></li>
-
-
-            <li class=""><a href="#userFlow">User flow </a></li>
-            <li class=""><a href="#informationArchitecture">Information architecture</a></li>
-
-            <li class=""><a href="#sketch">Lo-fi sketch</a></li>
-            <li class=""><a href="#mfScreens">Mid-fi screen flow &#38; testing </a></li>
-            <li class=""><a href="#mfScreensUpdate">Mid-fi screen flow &#38; Iteration </a></li>
+            <li class="rightPanel"><a href="#opportunities"> Insights to opportunities</a></li>
+            <li class="rightPanel"><a href="#priorityMatrix"> Priority matrix</a></li>
+            <li class="rightPanel"><a href="#useTypes">3 Persona Types</a></li>
+            <li class="rightPanel"><a href="#userFlow">User flow </a></li>
+            <li class="rightPanel"><a href="#informationArchitecture">Information architecture</a></li>
+            <li class="rightPanel"><a href="#sketch">Lo-fi sketch</a></li>
+            <li class="rightPanel"><a href="#mfScreens">Mid-fi screen flow &#38; testing </a></li>
+            <li class="rightPanel"><a href="#mfScreensUpdate">Mid-fi screen flow &#38; Iteration </a></li>
 
           </ul>
         </li>
         <li><a href="#deliver">Deliver</a>
           <ul>
-            <li class=""><a href="#screens">Hi-fi screens</a></li>
-            <li class=""><a href="#prototype">Clickable prototype </a></li>
-            <li class=""><a href="#components">UI components </a></li>
+            <li class="rightPanel"><a href="#screens">Hi-fi screens</a></li>
+            <li class="rightPanel"><a href="#prototype">Clickable prototype </a></li>
+            <li class="rightPanel"><a href="#components">UI components </a></li>
 
           </ul>
         </li>
