--- a/appointa/index.html
+++ b/appointa/index.html
@@ -436,7 +436,7 @@
   <main class="">
     <nav class="section-nav APPOINTA">
       <ol>
-        <li><a href="#discover">Discover</a>
+        <li><a href="#discover" class="titleRightPanel">Discover</a>
             <ul>
               <li class="rightPanel"><a href="#research">Research goals </a></li>
               <li class="rightPanel"><a href="#insights">Interview insights </a></li>
@@ -446,7 +446,7 @@
             </ul>
 
         </li>
-        <li><a href="#define">Define</a>
+        <li><a href="#define" class="titleRightPanel">Define</a>
           <ul>
             <li class="rightPanel"><a href="#keyPainPoints">Key pain points </a></li>
             <li class="rightPanel"><a href="#affinityMap"> Affinity diagram</a></li>
@@ -457,11 +457,11 @@
         </li>
 
 
-        <li><a href="#ideation">Develop</a>
+        <li><a href="#ideation" class="titleRightPanel">Develop</a>
           <ul>
             <li class="rightPanel"><a href="#opportunities"> Insights to opportunities</a></li>
             <li class="rightPanel"><a href="#priorityMatrix"> Priority matrix</a></li>
-            <li class="rightPanel"><a href="#useTypes">3 Persona Types</a></li>
+            <li class="rightPanel"><a href="#useTypes">Personas</a></li>
             <li class="rightPanel"><a href="#userFlow">User flow </a></li>
             <li class="rightPanel"><a href="#informationArchitecture">Information architecture</a></li>
             <li class="rightPanel"><a href="#sketch">Lo-fi sketch</a></li>
@@ -470,7 +470,7 @@
 
           </ul>
         </li>
-        <li><a href="#deliver">Deliver</a>
+        <li><a href="#deliver" class="titleRightPanel">Deliver</a>
           <ul>
             <li class="rightPanel"><a href="#screens">Hi-fi screens</a></li>
             <li class="rightPanel"><a href="#prototype">Clickable prototype </a></li>
@@ -1443,7 +1443,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> 3 Persona Types</p>
+                  <p class="tArrow"> Personas</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
