--- a/seer/index.html
+++ b/seer/index.html
@@ -322,39 +322,39 @@
   <main class="">
     <nav class="section-nav SEER">
       <ol>
-        <li><a href="#research">Research</a>
+        <li><a href="#research" class="titleRightPanel">Research</a>
           <ul>
-            <li class=""><a href="#researchObjective">Overview </a></li>
+            <li class=""><a href="#researchObjective" class="titleRightPanel">Overview </a></li>
             <li class=""><a href="#RedditAPI">Reddit API </a></li>
           </ul>
 
 
         </li>
-        <li><a href="#findings">Findings</a>
+        <li><a href="#findings" class="titleRightPanel">Findings</a>
           <ul>
-            <li class=""><a href="#empathyMap">Empathy Map</a></li>
+            <li class="rightPanel"><a href="#empathyMap">Empathy Map</a></li>
 
-            <li class=""><a href="#insights">Insights </a></li>
-            <li class=""><a href="#persona">Persona </a></li>
-            <li class=""><a href="#userJourney">User journey</a></li>
+            <li class="rightPanel"><a href="#insights">Insights </a></li>
+            <li class="rightPanel"><a href="#persona">Persona </a></li>
+            <li class="rightPanel"><a href="#userJourney">User journey</a></li>
           </ul>
         </li>
 
-        <li class=""><a href="#ideation">Ideation </a>
+        <li><a href="#ideation" class="titleRightPanel">Ideation </a>
           <ul>
-            <li class=""><a href="#InitiaConcepts">Initia concepts</a></li>
-            <li class=""><a href="#howitworks">How it works</a></li>
+            <li class="rightPanel"><a href="#InitiaConcepts">Initia concepts</a></li>
+            <li class="rightPanel"><a href="#howitworks">How it works</a></li>
 
-            <li class=""><a href="#wireframes">Wireframes</a></li>
-            <li class=""><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
-            <li class=""><a href="#testing">Usability testing </a></li>
-            <li class=""><a href="#midFiUpdate">Wireframe Update</a></li>
+            <li class="rightPanel"><a href="#wireframes">Wireframes</a></li>
+            <li class="rightPanel"><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
+            <li class="rightPanel"><a href="#testing">Usability testing </a></li>
+            <li class="rightPanel"><a href="#midFiUpdate">Wireframe Update</a></li>
 
           </ul>
         </li>
 
-        <li><a href="#solution">Prototypes </a></li>
-        <li><a href="#takeaways">Outcomes </a></li>
+        <li class="rightPanel"><a href="#solution" class="titleRightPanel">Prototypes </a></li>
+        <li class="rightPanel"><a href="#takeaways" class="titleRightPanel">Outcomes </a></li>
       </ol>
     </nav>
 
