--- a/seer/index.html
+++ b/seer/index.html
@@ -324,8 +324,8 @@
       <ol>
         <li><a href="#research" class="titleRightPanel">Research</a>
           <ul>
-            <li class=""><a href="#researchObjective" class="titleRightPanel">Overview </a></li>
-            <li class=""><a href="#RedditAPI">Reddit API </a></li>
+            <li class="rightPanel"><a href="#researchObjective">Overview </a></li>
+            <li class="rightPanel"><a href="#RedditAPI">Reddit API </a></li>
           </ul>
 
 
@@ -500,7 +500,7 @@
 
       <section id="RedditAPI">
 
-        <div class="BGseer2_1">
+        <div class="BGseer1">
           <div class="blankHS"></div>
 
 
@@ -518,6 +518,122 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="blankHS"></div>
+
+          <!-- Product / Features -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_Sentiment.svg" alt="icon">
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Sentiment </strong> </h4>
+                      <h5>Sentiment analysis is a natural language processing technique used
+                        to determine whether data is positive, negative or neutral.</h5>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_Upvote.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Upvote ratio </strong> </h4>
+                      <h5>Upvote ratio is used to determine how popular the post is. A higher ratio
+                        indicates a higher level of engagement. </h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_Users.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Subreddit </strong> </h4>
+                      <h5>Each subreddit is moderated by a team of volunteer moderators who enforce
+                        a set of rules.</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-3">
+
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_Calendar.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Timestamp </strong> </h4>
+                      <h5>Timestamp indicating when the post was created on the platform.</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_feather.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Title </strong> </h4>
+                      <h5>Access titles from Reddit posts to search titles across the entire Reddit platform. </h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_Document.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Conmment </strong> </h4>
+                      <h5>Developers can use the API to retrieve information about posts </h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <div class="elementSEER">
+                    <div class="elementInnerSEER heightS">
+                      <img class="iconM" src="icon_User.svg" alt="icon">
+
+                      <div class="blankHXS"></div>
+                      <h4> <strong> Author </strong> </h4>
+                      <h5>Get information about Reddit authors, such as
+                        their karma score and post history.</h5>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Product / Features -->
+          <div class="blankHXS"></div>
 
           <div class="wrapper">
             <div class="wrapper">
@@ -862,7 +978,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Initial concepts</p>
+                    <p class="tArrow"> Key Solution Elements</p>
                     <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -881,7 +997,7 @@
                 <div class="element">
                   <div class="elementSEER">
                     <div class="elementInnerSEER heightM">
-                      <img class="iconM" src="icon_CurrentState.svg" alt="icon">
+                      <img class="iconM" src="icon_Document.svg" alt="icon">
                       <div class="blankHXS"></div>
                       <h5> <strong> Create keywords </strong> </h5>
                       <ul>
@@ -1372,44 +1488,45 @@
       <section>
 
         <div class="BGseer2_1">
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow"> Final flow chart</p>
-                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="Grid">
+                    <p class="tArrow"> Final flow chart</p>
+                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--full u-textCenter">
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
+
+                  <img class="" src="diagram_finalFlow.svg" alt="Final flow">
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
+                <div class="element">
+                  <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Structuring the
+                    experience &#8221;
+                  </p>
 
-                <img class="" src="diagram_finalFlow.svg" alt="Final flow">
-
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="Grid Grid--full wrapper">
-          <div class="Grid-cell">
-            <div class="element">
-              <div class="element">
-                <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Structuring the experience &#8221;
-                </p>
-
+                </div>
               </div>
             </div>
           </div>
-        </div>
         </div>
       </section>
 
