--- a/seer/index.html
+++ b/seer/index.html
@@ -1203,18 +1203,17 @@
               </div>
             </div>
           </div>
+
           <!-- wireframes -->
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
-              <div class="element colorSEERBG leftVerLine SEER">
+              <div class="element colorSEERBG SEER">
                 <h4>
                   <p><strong>Based on the customer journey map, outline the primary steps in the
                       customer experience.</strong>
                   </p>
-                  <p> Step one, set up the <strong class="textDecor SEER">keyword</strong> </p>
-                  <p> step two, go to the dashboard to select the <strong
-                      class="textDecor SEER">time
-                      range</strong></strong> </p>
+                  <p> Step one, enter keyword(s)</p>
+                  <p> step two, adjustment</p>
                 </h4>
               </div>
             </div>
@@ -1238,39 +1237,23 @@
           </div>
           <!-- Arrow -->
           <div class="blankHS"></div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_keyword.svg" alt="Wireframes">
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target" src="Mid-fi_flowOverviewV1.png" alt="Wireframes">
               </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_keyword_dropdown.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
-
             </div>
           </div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_keyword_save.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_dashboard.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
+          <div class="blankHS"></div>
 
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element cardSEERGif shadowBox1">
+                <img src="Mid-fi_V1.gif" alt="Wireframes">
+              </div>
             </div>
           </div>
+          <div class="blankHS"></div>
 
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
@@ -1721,7 +1704,6 @@
               </div>
             </div>
             <div class="blankHS"></div>
-
             <div class="Grid Grid--full wrapper">
               <div class="Grid-cell">
                 <div class="element">
