--- a/seer/index.html
+++ b/seer/index.html
@@ -526,8 +526,7 @@
                         <div class="blankHXS"></div>
                         <h4> <strong> Subreddit </strong> </h4>
                         <h5>Each subreddit is moderated by a team of volunteer moderators who
-                          enforce
-                          a set of rules.</h5>
+                          enforce a set of rules.</h5>
                       </div>
                     </div>
                   </div>
@@ -1151,8 +1150,6 @@
                         <li> Visualize data </li>
                         <li> Customize data chart
                         </li>
-
-
                       </ul>
                     </div>
                   </div>
@@ -1161,50 +1158,93 @@
               </div>
             </div>
             <div class="blankHS"></div>
-
-            <div class="wrapper">
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element">
-
-                    <img class="modal-target " src="diagram_flowIdea.svg" alt="Placeholder">
-
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="blankHS"></div>
-
           </div>
         </section>
 
-        <section id="wireframes">
+        <section id="V1">
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Lo-fi wireframes</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          <div class="BGseer1_1">
+
+            <div class="wrapper">
+              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="Grid">
+                      <p class="tArrow"> Version 1</p>
+                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Arrow -->
+            <div class="blankHS"></div>
+            <div class="wrapper">
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <h2 class="colorSEER">Key flow and customer journey</h2>
+                </div>
+                <div class="blankHM"></div>
+
+                <div class="Grid-cell">
+                  <div class="element">
+                    <img class="modal-target " src="diagram_FlowV1.svg" alt="Placeholder">
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="blankHM"></div>
+            <div class="wrapper">
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <h2 class="colorSEER">Sketch the basic flow</h2>
+                </div>
+
+                <div class="blankHM"></div>
+                <div class="Grid-cell">
+                  <div class="element">
+                    <img class="modal-target" src="Low-fi_flow.svg" alt="Wireframes">
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <!-- Arrow -->
           <div class="blankHS"></div>
-          <!-- wireframes -->
-          <div class="Grid Grid--full wrapper">
+
+
+          <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid-cell">
+              <h2 class="colorSEER">Based on the sketch update the flow</h2>
+            </div>
+            <div class="blankHM"></div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target" src="Low-fi_flow.svg" alt="Wireframes">
+                <img class="modal-target" src="Mid-fi_flowOverviewV1.png" alt="Wireframes">
               </div>
             </div>
           </div>
+          <div class="blankHM"></div>
 
-          <!-- wireframes -->
+          <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid-cell">
+              <h2 class="colorSEER">Testing the basic functions, ensure the attainment of the
+                primary objective</h2>
+            </div>
+            <div class="blankHM"></div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class=" cardSEERGif shadowBoxPrototype" src="Mid-fi_V1.gif" alt="Wireframes">
+              </div>
+            </div>
+          </div>
+          <div class="blankHS"></div>
+
+
+
+
+          <div class="blankHS"></div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element colorSEERBG SEER">
@@ -1221,40 +1261,68 @@
         </section>
         <div class="blankHS"></div>
 
-        <section id="mid-fiWireframes">
+        <section id="V2">
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Mid-fi screen screens</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+          <div class="BGseer1_1">
+
+            <div class="wrapper">
+              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <div class="Grid">
+                      <p class="tArrow">Version 2</p>
+                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
+            <!-- Arrow -->
+            <div class="wrapper">
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <h2 class="colorSEER">Key flow update</h2>
+                </div>
+              </div>
+              <div class="blankHS"></div>
+
+              <div class="Grid Grid--full u-textCenter">
+                <div class="Grid-cell">
+                  <div class="element">
+                    <img class="modal-target " src="diagram_FlowV2.svg" alt="Placeholder">
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="blankHS"></div>
+
+
+            <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+              <div class="Grid-cell">
+                <h2 class="colorSEER">Flow overview</h2>
+              </div>
+            </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="modal-target" src="Mid-fi_flowOverviewV2.png" alt="Wireframes">
+              </div>
+            </div>
           </div>
-          <!-- Arrow -->
+        </div>
+
+          <div class="blankHS"></div>
           <div class="blankHS"></div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target" src="Mid-fi_flowOverviewV1.png" alt="Wireframes">
+                <img class=" cardSEERGif shadowBoxPrototype" src="Mid-fi_V2.gif" alt="Wireframes">
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
 
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element cardSEERGif shadowBox1">
-                <img src="Mid-fi_V1.gif" alt="Wireframes">
-              </div>
-            </div>
-          </div>
           <div class="blankHS"></div>
-
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element colorSEERBG leftVerLine SEER">
@@ -1282,7 +1350,7 @@
             </div>
           </div>
         </section>
-        <section id="testing" class="BGseer2">
+        <section id="V3" class="BGseer2">
           <!-- Arrow -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -1344,100 +1412,10 @@
                   </p>
                 </h4>
               </div>
-
-
-
-
-
-
-
             </div>
             <!-- testing -->
         </section>
-        <section id="midFiUpdate">
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Update based on testing</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="blankHS"></div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_update.svg" alt="Wireframes">
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_updateScreen.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
 
-            </div>
-          </div>
-          <div class="blankHS"></div>
-
-          <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Mid-fi adding details</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Arrow -->
-          <div class="blankHS"></div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_v2_drag.svg" alt="Wireframes">
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_v2_delete.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
-
-            </div>
-          </div>
-          <div class="blankHS"></div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_v2_search.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="modal-target shadowFilter" src="Mid-fi_v2_canceltype.svg"
-                    alt="Wireframes">
-                </div>
-              </div>
-
-            </div>
-          </div>
-        </section>
         <section>
 
           <div class="BGseer2_1">
@@ -1754,10 +1732,9 @@
             <li class="rightPanel"><a href="#InitiaConcepts">Initia concepts</a></li>
             <li class="rightPanel"><a href="#howitworks">How it works</a></li>
 
-            <li class="rightPanel"><a href="#wireframes">Wireframes</a></li>
-            <li class="rightPanel"><a href="#mid-fiWireframes">Mid-fi screen flow </a></li>
-            <li class="rightPanel"><a href="#testing">Usability testing </a></li>
-            <li class="rightPanel"><a href="#midFiUpdate">Wireframe Update</a></li>
+            <li class="rightPanel"><a href="#V1">Version 1</a></li>
+            <li class="rightPanel"><a href="#V2">Version 2</a></li>
+            <li class="rightPanel"><a href="#V3">Version 3</a></li>
 
           </ul>
         </li>
