--- a/seer/index.html
+++ b/seer/index.html
@@ -1211,7 +1211,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
+          <div class="blankHM"></div>
 
 
           <div class="Grid Grid--full u-textCenter wrapper">
@@ -1278,6 +1278,8 @@
               </div>
             </div>
             <!-- Arrow -->
+            <div class="blankHS"></div>
+
             <div class="wrapper">
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
@@ -1285,7 +1287,6 @@
                 </div>
               </div>
               <div class="blankHS"></div>
-
               <div class="Grid Grid--full u-textCenter">
                 <div class="Grid-cell">
                   <div class="element">
@@ -1295,33 +1296,33 @@
                 </div>
               </div>
             </div>
-            <div class="blankHS"></div>
-
-
-            <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+            <div class="blankHM"></div>
+            <div class="Grid Grid--full u-textCenter wrapper">
               <div class="Grid-cell">
                 <h2 class="colorSEER">Flow overview</h2>
               </div>
-            </div>
-          <div class="Grid Grid--full wrapper">
-            <div class="Grid-cell">
-              <div class="element">
-                <img class="modal-target" src="Mid-fi_flowOverviewV2.png" alt="Wireframes">
+
+              <div class="blankHS"></div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <img class="modal-target" src="Mid-fi_flowOverviewV2.png" alt="Wireframes">
+                </div>
               </div>
             </div>
           </div>
-        </div>
+          <div class="blankHM"></div>
 
-          <div class="blankHS"></div>
-          <div class="blankHS"></div>
-          <div class="Grid Grid--full wrapper">
+          <div class="Grid Grid--full u-textCenter wrapper">
+            <div class="Grid-cell">
+              <h2 class="colorSEER">Testing</h2>
+            </div>
+            <div class="blankHM"></div>
             <div class="Grid-cell">
               <div class="element">
                 <img class=" cardSEERGif shadowBoxPrototype" src="Mid-fi_V2.gif" alt="Wireframes">
               </div>
             </div>
           </div>
-
           <div class="blankHS"></div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
@@ -1350,14 +1351,17 @@
             </div>
           </div>
         </section>
+        <div class="blankHM"></div>
+
         <section id="V3" class="BGseer2">
+
           <!-- Arrow -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
               <div class="Grid-cell">
                 <div class="element">
                   <div class="Grid">
-                    <p class="tArrow"> Usability testing</p>
+                    <p class="tArrow"> Version 3</p>
                     <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
@@ -1365,6 +1369,35 @@
             </div>
           </div>
           <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <h2 class="colorSEER">Final Flow Chart </h2>
+              </div>
+            </div>
+            <div class="blankHS"></div>
+            <div class="Grid Grid--full u-textCenter">
+              <div class="Grid-cell">
+                <div class="element">
+                  <img class="" src="diagram_finalFlow.svg" alt="Final flow">
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Structuring the
+                    experience &#8221;
+                  </p>
+
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="blankHS"></div>
           <!-- testing -->
           <div class="Grid Grid--full wrapper">
@@ -1416,51 +1449,7 @@
             <!-- testing -->
         </section>
 
-        <section>
-
-          <div class="BGseer2_1">
-            <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow"> Final flow chart</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--full u-textCenter">
-                <div class="Grid-cell">
-                  <div class="element">
-
-                    <img class="" src="diagram_finalFlow.svg" alt="Final flow">
-
-                  </div>
-                </div>
-
-              </div>
-            </div>
-
-            <div class="Grid Grid--full wrapper">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="element">
-                    <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Structuring the
-                      experience &#8221;
-                    </p>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
+        <div class="blankHM"></div>
 
 
         <section id="solution">
@@ -1701,11 +1690,6 @@
 
 
       </section>
-      <div class="blankHS"></div>
-      <hr>
-      <div class="blankHM"></div>
-      <hr>
-      <div class="blankHM"></div>
     </div>
     <nav class="section-nav SEER">
       <ol>
